--- a/isfat_v2/isfat/package.json
+++ b/isfat_v2/isfat/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular",
+  "name": "isfat",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,9 +18,6 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "aos": "^2.3.4",
-    "bootstrap": "^5.3.2",
-    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -29,7 +26,6 @@
     "@angular-devkit/build-angular": "^16.2.5",
     "@angular/cli": "^16.2.5",
     "@angular/compiler-cli": "^16.2.0",
-    "@types/aos": "^3.0.6",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
