--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-HOST=localhost
-USUARIO=isfat_server
-PASSWORD=NsDgy1Ysb96E
-DATABASE=isfat_users
-PORT=8443
+HOST1=localhost
+USUARIO1=isfat_server
+PASSWORD1=NsDgy1Ysb96E
+DATABASE1=isfat_users
+PORT1=8443
